--- a/index.html
+++ b/index.html
@@ -7,27 +7,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
     <div class="container-main">
-        <div class="container-nav">
+        <div class="container-nav1">
             <div class="container-n1left">
-                <a href="">DR. DOCTOR</a>
+                <h1>DR. DOCTOR</h1>
             </div>
             <div class="container-n1center">
-                <a href="#Home">Home</a>
-                <a href="#About">About</a>
-                <a href="#Treatment">Treatment</a>
-                <a href="#Pricing">Pricing</a>
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">Treatment</a>
+                <a href="">Pricing</a>
             </div>
             <div class="container-n1right">
-                <span>Need help Call 1+ 1234567899</span>
+                <span>Need Help call<br> 1+1234567810</span>    
             </div>
         </div>
         <div class="container-page1">
-            
+
         </div>
     </div>
 
-    <script src="script.js"></script>
 </body>
 </html>
