--- a/index.html
+++ b/index.html
@@ -1,32 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="container-main">
-        <div class="container-nav1">
-            <div class="container-n1left">
-                <h1>DR. DOCTOR</h1>
-            </div>
-            <div class="container-n1center">
-                <a href="">Home</a>
-                <a href="">About</a>
-                <a href="">Treatment</a>
-                <a href="">Pricing</a>
-            </div>
-            <div class="container-n1right">
-                <span>Need Help call<br> 1+1234567810</span>    
-            </div>
+      <div class="container-background1">
+        <img src="background.jpeg" alt="">
+      </div>
+      <div class="container-nav1">
+        <div class="container-n1left">
+          <h1>DR. DOCTOR</h1>
         </div>
-        <div class="container-page1">
-
+        <div class="container-n1center">
+          <a href="">Home</a>
+          <a href="">About</a>
+          <a href="">Treatment</a>
+          <a href="">Pricing</a>
         </div>
+        <div class="container-n1right">
+          <span
+            >Need Help call 1+1234567810</span>
+        </div>
+      </div>
+      <div class="container-page1">
+        <div class="container-p1left">
+          <h1>DR. DOCTOR FREEMAN</h1>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto
+            laborum, quisquam temporibus voluptatum <br>expedita et nisi ipsa,
+            deleniti odio vero quidem eveniet, omnis sequi ex eos dolores
+            dolore? Animi, ipsum?
+          </p>
+        </div>
+        <div class="container-p1right">
+          <img src="/doctor image.png" alt="">
+        </div>
+      </div>
     </div>
-
-</body>
+  </body>
 </html>
