Final Template for presentation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container-main">
       <div class="container-background1">
-        <img src="background.jpeg" alt="">
+        <img src="background.jpeg" alt="" />
       </div>
       <div class="container-nav1">
         <div class="container-n1left">
@@ -22,22 +22,21 @@
           <a href="">Pricing</a>
         </div>
         <div class="container-n1right">
-          <span
-            >Need Help call 1+1234567810</span>
+          <span>Need Help call 1+1234567810</span>
         </div>
       </div>
       <div class="container-page1">
         <div class="container-p1left">
-          <h1>DR. DOCTOR FREEMAN</h1>
+          <h1>DR. DOCTOR</h1>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto
-            laborum, quisquam temporibus voluptatum <br>expedita et nisi ipsa,
+            laborum, quisquam temporibus voluptatum expedita et nisi ipsa,
             deleniti odio vero quidem eveniet, omnis sequi ex eos dolores
             dolore? Animi, ipsum?
           </p>
         </div>
         <div class="container-p1right">
-          <img src="/doctor image.png" alt="">
+          <img src="/doctor image.png" alt="" />
         </div>
       </div>
     </div>
